# maidrewrite

./: .flake8  .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: lint.yml
maid_in_abyss/: __main__.py  bot.py  constants.py  log.py
maid_in_abyss/database/: __init__.py  field.py  meta.py
maid_in_abyss/database/models/: __init__.py  hoyo_wiki.py
maid_in_abyss/exts/meta/: delete.py  eval.py  logging.py
maid_in_abyss/exts/mihoyo/hoyolab/: interface.py
maid_in_abyss/exts/mihoyo/wiki/: api.py  api_types.py  constants.py  display.py  exceptions.py  interactivity.py  plugin.py
maid_in_abyss/exts/mihoyo/wiki/backend/: api.py  api_types.py  cache.py
maid_in_abyss/exts/mihoyo/wiki/interface/: __init__.py  display.py
maid_in_abyss/exts/mihoyo/wiki/models/: __init__.py  base.py  battlesuits.py  display.py  stigmata.py  weapons.py
maid_in_abyss/utilities/: __init__.py  embeds.py  exceptions.py  json.py  plugin.py
